--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Orbit Waves</title>
+    <title>Nico Krause.com - orbit-db blog</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
